lib/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to voicevox_core_c_api
class VoicevoxCoreLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VoicevoxCoreLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VoicevoxCoreLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> voicevox_get_onnxruntime_lib_versioned_filename() {
    return _voicevox_get_onnxruntime_lib_versioned_filename();
  }

  late final _voicevox_get_onnxruntime_lib_versioned_filenamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'voicevox_get_onnxruntime_lib_versioned_filename');
  late final _voicevox_get_onnxruntime_lib_versioned_filename =
      _voicevox_get_onnxruntime_lib_versioned_filenamePtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> voicevox_get_onnxruntime_lib_unversioned_filename() {
    return _voicevox_get_onnxruntime_lib_unversioned_filename();
  }

  late final _voicevox_get_onnxruntime_lib_unversioned_filenamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'voicevox_get_onnxruntime_lib_unversioned_filename');
  late final _voicevox_get_onnxruntime_lib_unversioned_filename =
      _voicevox_get_onnxruntime_lib_unversioned_filenamePtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  VoicevoxLoadOnnxruntimeOptions
      voicevox_make_default_load_onnxruntime_options() {
    return _voicevox_make_default_load_onnxruntime_options();
  }

  late final _voicevox_make_default_load_onnxruntime_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxLoadOnnxruntimeOptions Function()>>(
          'voicevox_make_default_load_onnxruntime_options');
  late final _voicevox_make_default_load_onnxruntime_options =
      _voicevox_make_default_load_onnxruntime_optionsPtr
          .asFunction<VoicevoxLoadOnnxruntimeOptions Function()>();

  ffi.Pointer<VoicevoxOnnxruntime> voicevox_onnxruntime_get() {
    return _voicevox_onnxruntime_get();
  }

  late final _voicevox_onnxruntime_getPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<VoicevoxOnnxruntime> Function()>>(
          'voicevox_onnxruntime_get');
  late final _voicevox_onnxruntime_get = _voicevox_onnxruntime_getPtr
      .asFunction<ffi.Pointer<VoicevoxOnnxruntime> Function()>();

  int voicevox_onnxruntime_load_once(
    VoicevoxLoadOnnxruntimeOptions options,
    ffi.Pointer<ffi.Pointer<VoicevoxOnnxruntime>> out_onnxruntime,
  ) {
    return _voicevox_onnxruntime_load_once(
      options,
      out_onnxruntime,
    );
  }

  late final _voicevox_onnxruntime_load_oncePtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(VoicevoxLoadOnnxruntimeOptions,
                  ffi.Pointer<ffi.Pointer<VoicevoxOnnxruntime>>)>>(
      'voicevox_onnxruntime_load_once');
  late final _voicevox_onnxruntime_load_once =
      _voicevox_onnxruntime_load_oncePtr.asFunction<
          int Function(VoicevoxLoadOnnxruntimeOptions,
              ffi.Pointer<ffi.Pointer<VoicevoxOnnxruntime>>)>();

  int voicevox_open_jtalk_rc_new(
    ffi.Pointer<ffi.Char> open_jtalk_dic_dir,
    ffi.Pointer<ffi.Pointer<OpenJtalkRc>> out_open_jtalk,
  ) {
    return _voicevox_open_jtalk_rc_new(
      open_jtalk_dic_dir,
      out_open_jtalk,
    );
  }

  late final _voicevox_open_jtalk_rc_newPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<OpenJtalkRc>>)>>(
      'voicevox_open_jtalk_rc_new');
  late final _voicevox_open_jtalk_rc_new =
      _voicevox_open_jtalk_rc_newPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<OpenJtalkRc>>)>();

  int voicevox_open_jtalk_rc_use_user_dict(
    ffi.Pointer<OpenJtalkRc> open_jtalk,
    ffi.Pointer<VoicevoxUserDict> user_dict,
  ) {
    return _voicevox_open_jtalk_rc_use_user_dict(
      open_jtalk,
      user_dict,
    );
  }

  late final _voicevox_open_jtalk_rc_use_user_dictPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<OpenJtalkRc>, ffi.Pointer<VoicevoxUserDict>)>>(
      'voicevox_open_jtalk_rc_use_user_dict');
  late final _voicevox_open_jtalk_rc_use_user_dict =
      _voicevox_open_jtalk_rc_use_user_dictPtr.asFunction<
          int Function(
              ffi.Pointer<OpenJtalkRc>, ffi.Pointer<VoicevoxUserDict>)>();

  int voicevox_open_jtalk_rc_analyze(
    ffi.Pointer<OpenJtalkRc> open_jtalk,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_open_jtalk_rc_analyze(
      open_jtalk,
      text,
      output_accent_phrases_json,
    );
  }

  late final _voicevox_open_jtalk_rc_analyzePtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(ffi.Pointer<OpenJtalkRc>,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_open_jtalk_rc_analyze');
  late final _voicevox_open_jtalk_rc_analyze =
      _voicevox_open_jtalk_rc_analyzePtr.asFunction<
          int Function(ffi.Pointer<OpenJtalkRc>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  void voicevox_open_jtalk_rc_delete(
    ffi.Pointer<OpenJtalkRc> open_jtalk,
  ) {
    return _voicevox_open_jtalk_rc_delete(
      open_jtalk,
    );
  }

  late final _voicevox_open_jtalk_rc_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OpenJtalkRc>)>>(
          'voicevox_open_jtalk_rc_delete');
  late final _voicevox_open_jtalk_rc_delete = _voicevox_open_jtalk_rc_deletePtr
      .asFunction<void Function(ffi.Pointer<OpenJtalkRc>)>();

  VoicevoxInitializeOptions voicevox_make_default_initialize_options() {
    return _voicevox_make_default_initialize_options();
  }

  late final _voicevox_make_default_initialize_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxInitializeOptions Function()>>(
          'voicevox_make_default_initialize_options');
  late final _voicevox_make_default_initialize_options =
      _voicevox_make_default_initialize_optionsPtr
          .asFunction<VoicevoxInitializeOptions Function()>();

  ffi.Pointer<ffi.Char> voicevox_get_version() {
    return _voicevox_get_version();
  }

  late final _voicevox_get_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'voicevox_get_version');
  late final _voicevox_get_version =
      _voicevox_get_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  int voicevox_audio_query_create_from_accent_phrases(
    ffi.Pointer<ffi.Char> accent_phrases_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_audio_query_json,
  ) {
    return _voicevox_audio_query_create_from_accent_phrases(
      accent_phrases_json,
      output_audio_query_json,
    );
  }

  late final _voicevox_audio_query_create_from_accent_phrasesPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_audio_query_create_from_accent_phrases');
  late final _voicevox_audio_query_create_from_accent_phrases =
      _voicevox_audio_query_create_from_accent_phrasesPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_voice_model_file_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Pointer<VoicevoxVoiceModelFile>> out_model,
  ) {
    return _voicevox_voice_model_file_open(
      path,
      out_model,
    );
  }

  late final _voicevox_voice_model_file_openPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<VoicevoxVoiceModelFile>>)>>(
      'voicevox_voice_model_file_open');
  late final _voicevox_voice_model_file_open =
      _voicevox_voice_model_file_openPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<VoicevoxVoiceModelFile>>)>();

  void voicevox_voice_model_file_id(
    ffi.Pointer<VoicevoxVoiceModelFile> model,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_voice_model_id,
  ) {
    return _voicevox_voice_model_file_id(
      model,
      output_voice_model_id,
    );
  }

  late final _voicevox_voice_model_file_idPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<VoicevoxVoiceModelFile>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_voice_model_file_id');
  late final _voicevox_voice_model_file_id =
      _voicevox_voice_model_file_idPtr.asFunction<
          void Function(ffi.Pointer<VoicevoxVoiceModelFile>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  ffi.Pointer<ffi.Char> voicevox_voice_model_file_create_metas_json(
    ffi.Pointer<VoicevoxVoiceModelFile> model,
  ) {
    return _voicevox_voice_model_file_create_metas_json(
      model,
    );
  }

  late final _voicevox_voice_model_file_create_metas_jsonPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<VoicevoxVoiceModelFile>)>>(
      'voicevox_voice_model_file_create_metas_json');
  late final _voicevox_voice_model_file_create_metas_json =
      _voicevox_voice_model_file_create_metas_jsonPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<VoicevoxVoiceModelFile>)>();

  void voicevox_voice_model_file_delete(
    ffi.Pointer<VoicevoxVoiceModelFile> model,
  ) {
    return _voicevox_voice_model_file_delete(
      model,
    );
  }

  late final _voicevox_voice_model_file_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<VoicevoxVoiceModelFile>)>>(
      'voicevox_voice_model_file_delete');
  late final _voicevox_voice_model_file_delete =
      _voicevox_voice_model_file_deletePtr
          .asFunction<void Function(ffi.Pointer<VoicevoxVoiceModelFile>)>();

  int voicevox_synthesizer_new(
    ffi.Pointer<VoicevoxOnnxruntime> onnxruntime,
    ffi.Pointer<OpenJtalkRc> open_jtalk,
    VoicevoxInitializeOptions options,
    ffi.Pointer<ffi.Pointer<VoicevoxSynthesizer>> out_synthesizer,
  ) {
    return _voicevox_synthesizer_new(
      onnxruntime,
      open_jtalk,
      options,
      out_synthesizer,
    );
  }

  late final _voicevox_synthesizer_newPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxOnnxruntime>,
                  ffi.Pointer<OpenJtalkRc>,
                  VoicevoxInitializeOptions,
                  ffi.Pointer<ffi.Pointer<VoicevoxSynthesizer>>)>>(
      'voicevox_synthesizer_new');
  late final _voicevox_synthesizer_new =
      _voicevox_synthesizer_newPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxOnnxruntime>,
              ffi.Pointer<OpenJtalkRc>,
              VoicevoxInitializeOptions,
              ffi.Pointer<ffi.Pointer<VoicevoxSynthesizer>>)>();

  void voicevox_synthesizer_delete(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
  ) {
    return _voicevox_synthesizer_delete(
      synthesizer,
    );
  }

  late final _voicevox_synthesizer_deletePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<VoicevoxSynthesizer>)>>(
      'voicevox_synthesizer_delete');
  late final _voicevox_synthesizer_delete = _voicevox_synthesizer_deletePtr
      .asFunction<void Function(ffi.Pointer<VoicevoxSynthesizer>)>();
